--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,17 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-slider.min.css">
+    <link rel="stylesheet" href="css/jquery.bxslider.css">
     <link rel="stylesheet" href="css/style.css">
 
     <script src="js/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
         crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap-slider.min.js"></script>
+    <script src="js/jquery.bxslider.js"></script>
+    <script src="js/customize.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Prompt:300,400,600|Roboto:300,400,500&amp;subset=thai" rel="stylesheet">
 </head>
@@ -111,6 +116,112 @@
             </div>
         </nav>
     </header>
+    <section style="padding: 20% 0"></section>
+    <footer class="pt-4 pb-5">
+        <div class="container">
+            <div class="row device-sm">
+                <div class="col-lg text-center">
+                    <img src="images/logo.png" alt="" class="img-fluid pb-4">
+                    <p class="description">Worldwide Cloud Services Partner</p>
+                </div>
+                <div class="col-lg">
+                    <div class="accordion" id="accordionExample">
+                        <div class="card collapsed" data-toggle="collapse" data-target="#1" aria-expanded="false" aria-controls="1">
+                            <h3 class="f-20 text-center mb-0">ผลิตภัณฑ์</h3>
+                            <div id="1" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    <a class="item" href="#">Cloud Server</a>
+                                    <a class="item" href="#">Cloud Hosting</a>
+                                    <a class="item" href="#">Domain Name</a>
+                                    <a class="item" href="#">SSL</a>
+                                    <a class="item" href="#">Storage</a>
+                                    <a class="item" href="#">Database</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card collapsed" data-toggle="collapse" data-target="#2" aria-expanded="false" aria-controls="2">
+                            <h3 class="f-20 text-center mb-0">โซลูชั่น</h3>
+                            <div id="2" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    <a class="item" href="#">Gaming</a>
+                                    <a class="item" href="#">SAP</a>
+                                    <a class="item" href="#">E-Commerce</a>
+                                    <a class="item" href="#">IoT</a>
+                                    <a class="item" href="#">Web Hosting</a>
+                                    <a class="item" href="#">Digitals Marketing</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card collapsed" data-toggle="collapse" data-target="#3" aria-expanded="false" aria-controls="3">
+                            <h3 class="f-20 text-center mb-0">ช่วยเหลือ</h3>
+                            <div id="3" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    <a class="item" href="contact.html">ติดต่อเรา</a>
+                                    <a class="item" href="#">Blog</a>
+                                    <a class="item" href="#">After-sale</a>
+                                    <a class="item" href="#">FAQ</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card collapsed" data-toggle="collapse" data-target="#4" aria-expanded="false" aria-controls="4">
+                            <h3 class="f-20 text-center mb-0">บัญชีสมาชิก</h3>
+                            <div id="4" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    <a class="item" href="#">เข้าสู่ระบบ</a>
+                                    <a class="item" href="#">สมัครสมาชิก</a>
+                                    <a class="item" href="#">ลืมรหัสผ่าน</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg text-center pt-3">
+                    <p class=" f-14">&copy; Copyright SpidyBase, All rights reserved.</p>
+                </div>
+            </div>
+            <div class="device-lg">
+                <div class="row">
+                    <div class="col-lg-4 text-center">
+                        <img src="images/logo.png" alt="" class="img-fluid pb-4">
+                        <p class="description">Worldwide Cloud Services Partner</p>
+                        <p class="f-14">&copy; Copyright SpidyBase, All rights reserved.</p>
+                    </div>
+
+                    <div class="col menu">
+                        <h3 class="f-20  mb-0">ผลิตภัณฑ์</h3>
+                        <a class="item" href="#">Cloud Server</a>
+                        <a class="item" href="#">Cloud Hosting</a>
+                        <a class="item" href="#">Domain Name</a>
+                        <a class="item" href="#">SSL</a>
+                        <a class="item" href="#">Storage</a>
+                        <a class="item" href="#">Database</a>
+                    </div>
+                    <div class="col menu">
+                        <h3 class="f-20  mb-0">โซลูชั่น</h3>
+                        <a class="item" href="#">Gaming</a>
+                        <a class="item" href="#">SAP</a>
+                        <a class="item" href="#">E-Commerce</a>
+                        <a class="item" href="#">IoT</a>
+                        <a class="item" href="#">Web Hosting</a>
+                        <a class="item" href="#">Digitals Marketing</a>
+                    </div>
+                    <div class="col menu">
+                        <h3 class="f-20  mb-0">ช่วยเหลือ</h3>
+                        <a class="item" href="contact.html">ติดต่อเรา</a>
+                        <a class="item" href="#">Blog</a>
+                        <a class="item" href="#">After-sale</a>
+                        <a class="item" href="#">FAQ</a>
+                    </div>
+                    <div class="col menu">
+                        <h3 class="f-20  mb-0">บัญชีสมาชิก</h3>
+                        <a class="item" href="#">เข้าสู่ระบบ</a>
+                        <a class="item" href="#">สมัครสมาชิก</a>
+                        <a class="item" href="#">ลืมรหัสผ่าน</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
