--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-slider.min.css">
     <link rel="stylesheet" href="css/jquery.bxslider.css">
@@ -303,7 +304,7 @@
                             <ul>
                                 <li>
                                     <p class="card-text text-left">
-                                        <i class="fa fa-fw fa-sliders color-theme"></i>
+                                        <i class="fa fa-fw fa-terminal color-theme"></i>
                                         สามารถควบคุมผ่านBrowser
                                     </p>
                                 </li>
@@ -333,7 +334,7 @@
                             <ul>
                                 <li>
                                     <p class="card-text text-left">
-                                        <i class="fa fa-fw fa-sliders color-theme"></i>
+                                        <i class="fa fa-fw fa-terminal color-theme"></i>
                                         สามารถควบคุมผ่านBrowser
                                     </p>
                                 </li>
@@ -368,7 +369,7 @@
                             <ul>
                                 <li>
                                     <p class="card-text text-left">
-                                        <i class="fa fa-fw fa-sliders color-theme"></i>
+                                        <i class="fa fa-fw fa-terminal color-theme"></i>
                                         สามารถควบคุมผ่านBrowser
                                     </p>
                                 </li>
@@ -415,7 +416,7 @@
                                     <ul>
                                         <li>
                                             <p class="card-text text-left">
-                                                <i class="fa fa-fw fa-sliders color-theme"></i>
+                                                <i class="fa fa-fw fa-terminal color-theme"></i>
                                                 สามารถควบคุมผ่านBrowser
                                             </p>
                                         </li>
@@ -450,7 +451,7 @@
                                     <ul>
                                         <li>
                                             <p class="card-text text-left">
-                                                <i class="fa fa-fw fa-sliders color-theme"></i>
+                                                <i class="fa fa-fw fa-terminal color-theme"></i>
                                                 สามารถควบคุมผ่านBrowser
                                             </p>
                                         </li>
@@ -487,7 +488,7 @@
                                     <ul>
                                         <li>
                                             <p class="card-text text-left">
-                                                <i class="fa fa-fw fa-sliders color-theme"></i>
+                                                <i class="fa fa-fw fa-terminal color-theme"></i>
                                                 สามารถควบคุมผ่านBrowser
                                             </p>
                                         </li>
@@ -701,10 +702,10 @@
             </div>
             <div class="contact-location--">
                 <img src="images/map.png" alt="" class="img-fluid">
-                <i class="fa fa-circle text-warning th" data-toggle="tooltip" data-placement="top" title="Thailand"></i>
-                <i class="fa fa-circle text-warning jp" data-toggle="tooltip" data-placement="top" title="Japan"></i>
-                <i class="fa fa-circle text-warning gm" data-toggle="tooltip" data-placement="top" title="Germany"></i>
-                <i class="fa fa-circle text-warning ccg" data-toggle="tooltip" data-placement="top" title="Chicago"></i>
+                <i class="fas fa-circle text-warning th" data-toggle="tooltip" data-placement="top" title="Thailand"></i>
+                <i class="fas fa-circle text-warning jp" data-toggle="tooltip" data-placement="top" title="Japan"></i>
+                <i class="fas fa-circle text-warning gm" data-toggle="tooltip" data-placement="top" title="Germany"></i>
+                <i class="fas fa-circle text-warning ccg" data-toggle="tooltip" data-placement="top" title="Chicago"></i>
             </div>
         </div>
     </section>
