--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-slider.min.css">
     <link rel="stylesheet" href="css/jquery.bxslider.css">
@@ -17,6 +18,34 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
         crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
+
+    <script>
+        function initMap() {
+            var myLatlng = new google.maps.LatLng(12.647613, 99.865162);
+            var mapOptions = {
+                zoom: 15,
+                center: myLatlng
+            }
+            var map = new google.maps.Map(document.getElementById("map"), mapOptions);
+            var mapB = new google.maps.Map(document.getElementById("mapBig"), mapOptions);
+
+            var marker = new google.maps.Marker({
+                position: myLatlng,
+                title: "Hello World!"
+            });
+
+            var marker2 = new google.maps.Marker({
+                position: myLatlng,
+                title: "Hello World!"
+            });
+
+            // To add the marker to the map, call setMap();
+            marker.setMap(map);
+            marker2.setMap(mapB);
+        }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDEj6aoRRJ4XbYR1JiHQhKxX21Myvto414&callback=initMap" async
+        defer></script>
     <script src="js/bootstrap-slider.min.js"></script>
     <script src="js/jquery.bxslider.js"></script>
     <script src="js/customize.js"></script>
@@ -116,7 +145,147 @@
             </div>
         </nav>
     </header>
-    <section style="padding: 20% 0"></section>
+    <div class="jumbotron pt-100" id="contact">
+        <div class="container text-center">
+            <img src="images/logo_white.png" width="140px">
+            <h1 class="display-6">Contact us</h1>
+        </div>
+    </div>
+    <section id="contact-us">
+        <div class="container">
+            <div class="row">
+                <div class="col col-md-6" style="padding-top: 10%;">
+                    <img src="images/special_banner.png" width="300px" class="pt-5">
+                    <h3 class="pt-2">เพียงทำแบบสอบถามรับไปเลย ส่วนลดจากพวกเรา Spidybase 10%</h3>
+                    <small class="text-left">*สงวนสิทธิเฉพาะสมาชิก Spidybase</small>
+                </div>
+
+                <div class="col col-md-6 pt-3 pb-3">
+                    <hr>
+                    <div class="row">
+                        <div class="col-12 text-left apply-form">
+                            <h5 class="text-warning">กรอกแบบฟอร์มเพื่อสิทธิประโยชน์</h5>
+                        </div>
+                        <div class="col-12 text-left pl-5 pr-5">
+                            <p class="text-warning">เพศ</p>
+                            <div class="custom-control custom-radio custom-control-inline">
+                                <input type="radio" id="1" name="11" class="custom-control-input">
+                                <label class="custom-control-label" for="1">ชาย</label>
+                            </div>
+                            <div class="custom-control custom-radio custom-control-inline">
+                                <input type="radio" id="2" name="11" class="custom-control-input">
+                                <label class="custom-control-label" for="2">หญิง</label>
+                            </div>
+                            <p class="text-warning pt-3">คุณรู้จัก Spidybase หรือไม่</p>
+                            <div class="custom-control custom-radio custom-control-inline">
+                                <input type="radio" id="3" name="22" class="custom-control-input">
+                                <label class="custom-control-label" for="3">รู้จัก</label>
+                            </div>
+                            <div class="custom-control custom-radio custom-control-inline">
+                                <input type="radio" id="4" name="22" class="custom-control-input">
+                                <label class="custom-control-label" for="4">ไม่รู้จัก</label>
+                            </div>
+                            <p class="text-warning pt-3">คุณเคยใช้บริการ Cloud หรือไม่</p>
+                            <div class="custom-control custom-radio custom-control-inline">
+                                <input type="radio" id="5" name="33" class="custom-control-input">
+                                <label class="custom-control-label" for="5">เคย</label>
+                            </div>
+                            <div class="custom-control custom-radio custom-control-inline">
+                                <input type="radio" id="6" name="33" class="custom-control-input">
+                                <label class="custom-control-label" for="6">ไม่เคย</label>
+                            </div>
+                            <p class="text-warning pt-3">กรอก E-mail ของคุณ</p>
+                            <input type="email" class="form-control email" placeholder="E-mail">
+                            <div class="form-check pt-3 pb-3">
+                                <input class="form-check-input" type="checkbox">
+                                <label class="form-check-label">
+                                    รับข่าวสารจาก Spidybase
+                                </label>
+                            </div>
+                            <button type="submit" class="btn btn-outline-primary color-theme border-color-theme" style="width:150px">ส่ง</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr class="device-sm">
+            <div class="row pt-4 pb-4 device-sm--">
+                <div class="col-md-4 pb-5">
+                    <div class="media">
+                        <div class="media-body">
+                            <i class="fa fa-address-book fa-3x pb-2"></i>
+                            <p class="media-text pt-2">(+66)123456789
+                                <br>contact@spidybase.com</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 pb-5">
+                    <div class="media">
+                        <div class="media-body">
+                            <i class="fa fa-clock fa-3x pb-2"></i>
+                            <p class="media-text pt-2">จันทร์-ศุกร์ 9:00-17:00
+                                <br>หยุดเสาร์และอาทิตย์</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 pb-5">
+                    <div class="media">
+                        <div class="media-body">
+                            <i class="fa fa-map-marker fa-3x pb-2"></i>
+                            <p class="media-text pt-2">1 หมู่ 3 ถนนชะอำ-ปราณบุรี
+                                <br>ต.สามพระยา อ.ชะอำ
+                                <br>จ.เพชรบุรี 76120</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div id="map"></div>
+                </div>
+            </div>
+            <div class="row pt-4 pb-4 device-lg--">
+                <div class="col-lg-4">
+                    <ul>
+                        <li class="service-item contact">
+                            <div class="media">
+                                <div class="media-icon">
+                                    <i class="fa fa-address-book fa-2x"></i>
+                                </div>
+                                <div class="media-body text-left">
+                                    <p class="media-text">(+66)123456789
+                                        <br>contact@spidybase.com</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="service-item contact">
+                            <div class="media">
+                                <div class="media-icon">
+                                    <i class="fa fa-clock fa-2x"></i>
+                                </div>
+                                <div class="media-body text-left">
+                                    <p class="media-text">จันทร์-ศุกร์ 9:00-17:00
+                                        <br>หยุดเสาร์และอาทิตย์</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="service-item contact">
+                            <div class="media">
+                                <div class="media-icon">
+                                    <i class="fa fa-map-marker fa-2x"></i>
+                                </div>
+                                <div class="media-body text-left">
+                                    <p class="media-text">1 หมู่ 3 ถนนชะอำ-ปราณบุรี
+                                        <br>ต.สามพระยา อ.ชะอำ
+                                        <br>จ.เพชรบุรี 76120</p>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-lg-8">
+                    <div id="mapBig"></div>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer class="pt-4 pb-5">
         <div class="container">
             <div class="row device-sm">
